kubernetes/frontend/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
